--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,18 @@
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
 
-
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-dependencies</artifactId>
+			<version>2022.0.2</version>
+			<type>pom</type>
+			<scope>import</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
+			<version>4.0.2</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -43,6 +54,13 @@
 			<groupId>com.squareup.retrofit2</groupId>
 			<artifactId>converter-simplexml</artifactId>
 			<version>2.9.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.github.openfeign</groupId>
+			<artifactId>feign-bom</artifactId>
+			<version>12.2</version>
+			<type>pom</type>
+			<scope>import</scope>
 		</dependency>
 
 	</dependencies>
